product page dn

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <!-- Right Icons -->
           <div class="flex items-center space-x-4 rounded-lg">
             <!-- Language -->
-            <div id="language-selector" class="relative font-primary">
+            <div id="language-selector" class="relative font-primary m-0 lg:mr-[16px]">
               <div
                 class="flex items-center space-x-2 p-[8px] pr-[12px] rounded-full cursor-pointer bg-[var(--accent1)] transition-colors duration-200"
               >
@@ -2723,7 +2723,7 @@
         <div class="swiper summer-swiper p-4 overflow-visible">
           <div class="swiper-wrapper py-2 pb-10 md:pb-2">
             <!-- Card -->
-            <div class="swiper-slide summer-sale-card">
+            <div class="swiper-slide summer-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -2831,7 +2831,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide summer-sale-card">
+            <div class="swiper-slide summer-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -2928,7 +2928,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide summer-sale-card">
+            <div class="swiper-slide summer-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -3036,7 +3036,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide summer-sale-card">
+            <div class="swiper-slide summer-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -3144,7 +3144,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide summer-sale-card">
+            <div class="swiper-slide summer-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -3413,7 +3413,7 @@
 
         <div class="swiper best-seller-swiper overflow-visible">
           <div class="swiper-wrapper py-2 pb-10 md:pb-2">
-            <div class="swiper-slide best-sale-card">
+            <div class="swiper-slide best-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -3499,7 +3499,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide best-sale-card">
+            <div class="swiper-slide best-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -3585,7 +3585,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide best-sale-card">
+            <div class="swiper-slide best-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -3671,7 +3671,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide best-sale-card">
+            <div class="swiper-slide best-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -3761,7 +3761,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide best-sale-card">
+            <div class="swiper-slide best-sale-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -4016,7 +4016,7 @@
         <div class="swiper fruits-swiper overflow-visible">
           <div class="swiper-wrapper py-2 pb-10 md:pb-2">
             <!-- Card -->
-            <div class="swiper-slide fruits-vegetables-card">
+            <div class="swiper-slide fruits-vegetables-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -4124,7 +4124,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide fruits-vegetables-card">
+            <div class="swiper-slide fruits-vegetables-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -4221,7 +4221,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide fruits-vegetables-card">
+            <div class="swiper-slide fruits-vegetables-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -4318,7 +4318,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide fruits-vegetables-card">
+            <div class="swiper-slide fruits-vegetables-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -4415,7 +4415,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide fruits-vegetables-card">
+            <div class="swiper-slide fruits-vegetables-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -4787,7 +4787,7 @@
         <div class="swiper frozen-swiper overflow-visible">
           <div class="swiper-wrapper py-2 pb-10 md:pb-2">
             <!-- Card -->
-            <div class="swiper-slide fresh-frozen-card">
+            <div class="swiper-slide fresh-frozen-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -4895,7 +4895,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide fresh-frozen-card">
+            <div class="swiper-slide fresh-frozen-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -4992,7 +4992,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide fresh-frozen-card">
+            <div class="swiper-slide fresh-frozen-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -5100,7 +5100,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide fresh-frozen-card">
+            <div class="swiper-slide fresh-frozen-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -5208,7 +5208,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide fresh-frozen-card">
+            <div class="swiper-slide fresh-frozen-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -5479,7 +5479,7 @@
         <div class="swiper arrival-swiper overflow-visible">
           <div class="swiper-wrapper py-2 pb-10 md:pb-2">
             <!-- Card -->
-            <div class="swiper-slide new-arrival-card">
+            <div class="swiper-slide new-arrival-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -5587,7 +5587,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide new-arrival-card">
+            <div class="swiper-slide new-arrival-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -5695,7 +5695,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide new-arrival-card">
+            <div class="swiper-slide new-arrival-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -5792,7 +5792,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide new-arrival-card">
+            <div class="swiper-slide new-arrival-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
@@ -5900,7 +5900,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide new-arrival-card">
+            <div class="swiper-slide new-arrival-card product-card">
               <div
                 class="group border border-[var(--border3)] rounded-[12px] hover:drop-shadow-[0_0_4px_rgba(0,0,0,0.10)] transition bg-[var(--secondary-color)] overflow-hidden relative"
               >
