--- a/product.html
+++ b/product.html
@@ -854,7 +854,7 @@
               >
                 <div class="custom-container">
                   <div
-                    class="mx-auto grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
+                    class="mx-auto shadow-sm grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
                   >
                     <div>
                       <h4 class="font-bold mb-4">Instant Food & Mixes</h4>
@@ -1116,7 +1116,7 @@
               >
                 <div class="custom-container">
                   <div
-                    class="mx-auto grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
+                    class="mx-auto shadow-sm grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
                   >
                     <div>
                       <h4 class="font-bold mb-4">Instant Food & Mixes</h4>
@@ -1372,7 +1372,7 @@
               >
                 <div class="custom-container">
                   <div
-                    class="mx-auto grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
+                    class="mx-auto shadow-sm grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
                   >
                     <div>
                       <h4 class="font-bold mb-4">Instant Food & Mixes</h4>
