checkout, wishlist page done

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
             <!-- Icon -->
             <a
-              href="#"
+              href="./wishlist.html"
               class="whichlist relative cursor-pointer hidden lg:flex"
             >
               <svg
@@ -1364,7 +1364,7 @@
               >
                 <div class="custom-container">
                   <div
-                    class="mx-auto shadow-sm grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
+                    class="mx-auto grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
                   >
                     <div>
                       <h4 class="font-bold mb-4">Instant Food & Mixes</h4>
@@ -2209,7 +2209,7 @@
               <div
                 class="flex items-end justify-center text-center mx-auto px-[4px] w-full text-[var(--text)] group-hover:text-[var(--primary-color)]"
               >
-                <a href="#" class="whichlist pt-1">
+                <a href="./wishlist.html" class="whichlist pt-1">
                   <h2 class="w-5 h-5 mx-auto relative cursor-pointer">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -4697,7 +4697,7 @@
                   Green Chutney
                 </h3>
                 <button
-                  class="mt-4 bg-[var(--primary-color)] text-[var(--secondary-color)] px-5 py-2 rounded-full hover:bg-[var(--black)] font-semibold text-[16px] transition duration-300"
+                  class="mt-4 bg-[var(--primary-color)] text-[var(--secondary-color)] px-5 py-2 rounded-full hover:bg-[var(--black)] font-semibold text-[16px] transition duration-300 cursor-pointer"
                 >
                   Shop Now
                 </button>
@@ -4715,7 +4715,7 @@
                   August Deals
                 </h3>
                 <button
-                  class="mt-4 bg-[var(--primary-color)] text-[var(--secondary-color)] px-5 py-2 rounded-full hover:bg-[var(--black)] font-semibold text-[16px] transition duration-300"
+                  class="mt-4 bg-[var(--primary-color)] text-[var(--secondary-color)] px-5 py-2 rounded-full hover:bg-[var(--black)] font-semibold text-[16px] transition duration-300 cursor-pointer"
                 >
                   Shop Now
                 </button>
