--- a/product.html
+++ b/product.html
@@ -278,7 +278,7 @@
 
             <!-- Icon -->
             <a
-              href="#"
+              href="./wishlist.html"
               class="whichlist relative cursor-pointer hidden lg:flex"
             >
               <svg
@@ -2217,7 +2217,7 @@
               <div
                 class="flex items-end justify-center text-center mx-auto px-[4px] w-full text-[var(--text)] group-hover:text-[var(--primary-color)]"
               >
-                <a href="#" class="whichlist pt-1">
+                <a href="./wishlist.html" class="whichlist pt-1">
                   <h2 class="w-5 h-5 mx-auto relative cursor-pointer">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -2951,8 +2951,7 @@
                 30 of 500 Products
               </h2>
               <select
-                id="sort-by"
-                class="border-[var(--border)] !rounded-full text-sm text-[var(--text)] focus:outline-none focus:!border-[var(--primary-color)] transition duration-300"
+                class="sort-by-select border-[var(--border)] !rounded-full text-sm text-[var(--text)] focus:outline-none focus:!border-[var(--primary-color)] transition duration-300"
               >
                 <option>Sort By</option>
                 <option>Price: Low to High</option>
