--- a/test2.html
+++ b/test2.html
@@ -1,352 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Tabs</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-white text-gray-800 font-sans">
-    <div class="bg-gray-50 min-h-screen py-8 font-sans">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <a
-          href="#"
-          class="flex items-center text-gray-500 hover:text-gray-700 mb-6 text-sm font-medium"
-        >
-          <svg
-            class="w-4 h-4 mr-1"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M15 19l-7-7 7-7"
-            ></path>
-          </svg>
-          Back to Ripens
-        </a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cart Table</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-white text-black font-sans">
 
-        <div class="flex flex-col lg:flex-row gap-8">
-          <div class="w-full lg:w-3/5 space-y-8">
-            <div class="bg-white p-8 rounded-lg shadow-sm">
-              <h2 class="text-xl font-semibold mb-6 text-gray-800">
-                Delivery Information
-              </h2>
-              <form class="grid grid-cols-1 md:grid-cols-2 gap-x-6 gap-y-4">
-                <div>
-                  <label
-                    for="full-name"
-                    class="block text-sm font-medium text-gray-700 mb-1"
-                    >Full Name</label
-                  >
-                  <input
-                    type="text"
-                    id="full-name"
-                    placeholder="Enter your name..."
-                    class="w-full px-4 py-3 rounded-lg bg-gray-100 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none placeholder-gray-400 text-gray-700"
-                  />
-                </div>
-                <div>
-                  <label
-                    for="email"
-                    class="block text-sm font-medium text-gray-700 mb-1"
-                    >Email</label
-                  >
-                  <input
-                    type="email"
-                    id="email"
-                    placeholder="example@gmail.com"
-                    class="w-full px-4 py-3 rounded-lg bg-gray-100 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none placeholder-gray-400 text-gray-700"
-                  />
-                </div>
-                <div>
-                  <label
-                    for="phone"
-                    class="block text-sm font-medium text-gray-700 mb-1"
-                    >Phone Number</label
-                  >
-                  <div class="flex">
-                    <input
-                      type="tel"
-                      id="phone"
-                      placeholder="XXXX XXX XXX"
-                      class="flex-1 w-full px-4 py-3 rounded-lg bg-gray-100 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none placeholder-gray-400 text-gray-700"
-                    />
-                  </div>
-                </div>
-                <div>
-                  <label
-                    for="country"
-                    class="block text-sm font-medium text-gray-700 mb-1"
-                    >Country</label
-                  >
-                  <select
-                    id="country"
-                    class="w-full px-4 py-3 rounded-lg bg-gray-100 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none text-gray-400"
-                  >
-                    <option disabled selected>Select here...</option>
-                    <option>Country A</option>
-                    <option>Country B</option>
-                  </select>
-                </div>
-                <div>
-                  <label
-                    for="city"
-                    class="block text-sm font-medium text-gray-700 mb-1"
-                    >City</label
-                  >
-                  <select
-                    id="city"
-                    class="w-full px-4 py-3 rounded-lg bg-gray-100 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none text-gray-400"
-                  >
-                    <option disabled selected>Select here...</option>
-                    <option>City A</option>
-                    <option>City B</option>
-                  </select>
-                </div>
-                <div>
-                  <label
-                    for="postal-code"
-                    class="block text-sm font-medium text-gray-700 mb-1"
-                    >Postal Code</label
-                  >
-                  <input
-                    type="text"
-                    id="postal-code"
-                    placeholder="Enter your postal code..."
-                    class="w-full px-4 py-3 rounded-lg bg-gray-100 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none placeholder-gray-400 text-gray-700"
-                  />
-                </div>
-                <div class="md:col-span-2">
-                  <label
-                    for="street"
-                    class="block text-sm font-medium text-gray-700 mb-1"
-                    >Street & House Number</label
-                  >
-                  <input
-                    type="text"
-                    id="street"
-                    placeholder="Enter your street & house number..."
-                    class="w-full px-4 py-3 rounded-lg bg-gray-100 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none placeholder-gray-400 text-gray-700"
-                  />
-                </div>
-              </form>
-            </div>
-
-            <div class="bg-white p-8 rounded-lg shadow-sm">
-              <h2 class="text-xl font-semibold mb-6 text-gray-800">
-                Payment Method
-              </h2>
-              <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
-                <div>
-                  <input
-                    type="radio"
-                    id="paypal"
-                    name="payment-method"
-                    class="hidden peer"
-                    checked
-                  />
-                  <label
-                    for="paypal"
-                    class="flex items-center justify-center p-4 border rounded-lg cursor-pointer transition-colors peer-checked:border-indigo-500 peer-checked:ring-2 peer-checked:ring-indigo-500"
-                  >
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg"
-                      alt="PayPal"
-                      class="h-6"
-                    />
-                  </label>
-                </div>
-                <div>
-                  <input
-                    type="radio"
-                    id="credit-card"
-                    name="payment-method"
-                    class="hidden peer"
-                  />
-                  <label
-                    for="credit-card"
-                    class="flex flex-col items-center justify-center p-4 border rounded-lg cursor-pointer transition-colors peer-checked:border-indigo-500 peer-checked:ring-2 peer-checked:ring-indigo-500"
-                  >
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Visa_Inc._logo.svg"
-                      alt="Visa"
-                      class="h-6 mb-2"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Mastercard_2019_logo.svg"
-                      alt="Mastercard"
-                      class="h-6"
-                    />
-                  </label>
-                </div>
-                <div>
-                  
-                  <label
-                    for="klarna"
-                    class="flex flex-col gap-1 items-center justify-center p-4 border rounded-lg cursor-pointer transition-colors peer-checked:border-indigo-500 peer-checked:ring-2 peer-checked:ring-indigo-500"
-                  >
-                  <div class="flex items-center gap-2">
-                    <input
-                    type="radio"
-                    id="klarna"
-                    name="payment-method"
-                    class=" peer"
-                  />
-                  <span>Klarna Pay</span>
-                  </div>
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Klarna_logo.svg"
-                      alt="Klarna Pay"
-                      class="h-6"
-                    />
-                  </label>
-                </div>
-              </div>
-            </div>
-
-            <div class="bg-white p-8 rounded-lg shadow-sm">
-              <h2 class="text-xl font-semibold mb-6 text-gray-800">
-                Billing Address
-              </h2>
-              <div class="flex items-center flex-col sm:flex-row gap-4">
-                <label
-                  for="same-address"
-                  class="flex gap-2 items-center w-full text-center px-4 py-3 border rounded-lg cursor-pointer transition-colors font-medium text-sm peer-checked:border-indigo-500 peer-checked:ring-2 peer-checked:ring-indigo-500 peer-checked:text-indigo-600"
-                >
-                  <input
-                    type="radio"
-                    id="same-address"
-                    name="billing-address"
-                    class="peer"
-                    checked
-                  />
-                  Same as shipping address
-                </label>
-                <label
-                  for="different-address"
-                  class="flex gap-2 items-center w-full text-center px-4 py-3 border rounded-lg cursor-pointer transition-colors font-medium text-sm peer-checked:border-indigo-500 peer-checked:ring-2 peer-checked:ring-indigo-500 peer-checked:text-indigo-600"
-                >
-                  <input
-                    type="radio"
-                    id="different-address"
-                    name="billing-address"
-                    class="peer"
-                    checked
-                  />
-                  Use a different billing address
-                </label>
-              </div>
-            </div>
-          </div>
-
-          <div class="w-full lg:w-2/5">
-            <div class="bg-white p-8 rounded-lg shadow-sm sticky top-8">
-              <h2 class="text-xl font-semibold mb-6 text-gray-800">
-                Product Details
-              </h2>
-              <div class="flex items-center mb-6 pb-6">
-                <img
-                  src="https://via.placeholder.com/64"
-                  alt="Product Image"
-                  class="w-16 h-16 rounded-lg mr-4"
-                />
-                <div class="flex-1">
-                  <h3 class="font-medium text-gray-800">Anjasaar</h3>
-                  <p class="text-sm text-gray-500">
-                    200g Pori Puri Chips (Kalpappas)
-                  </p>
-                </div>
-                <div class="flex items-center text-gray-500 text-lg">
-                  <button
-                    id="quantity-minus"
-                    class="w-6 h-6 flex items-center justify-center rounded-full bg-gray-200 hover:bg-gray-300 transition-colors"
-                  >
-                    -
-                  </button>
-                  <span
-                    id="quantity-value"
-                    class="mx-3 text-base text-gray-800 font-semibold"
-                    >1</span
-                  >
-                  <button
-                    id="quantity-plus"
-                    class="w-6 h-6 flex items-center justify-center rounded-full bg-gray-200 hover:bg-gray-300 transition-colors"
-                  >
-                    +
-                  </button>
-                </div>
-                <span class="text-lg font-semibold ml-4 text-indigo-600"
-                  >€1.49</span
-                >
-              </div>
-
-              <div class="mb-6">
-                <h3 class="text-sm font-medium text-gray-800 mb-2">
-                  Have any promo code?
-                </h3>
-                <div class="flex space-x-2">
-                  <input
-                    type="text"
-                    placeholder="Enter promo code..."
-                    class="flex-1 px-4 py-2 rounded-lg bg-gray-100 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none text-gray-700 placeholder-gray-400"
-                  />
-                  <button
-                    class="bg-indigo-600 text-white px-5 py-2 rounded-lg text-sm font-medium hover:bg-indigo-700 transition-colors"
-                  >
-                    Apply
-                  </button>
-                </div>
-              </div>
-
-              <div class="space-y-3">
-                <div class="flex justify-between text-sm text-gray-600">
-                  <span>Subtotal</span>
-                  <span>€1.49</span>
-                </div>
-                <div class="flex justify-between text-sm text-gray-600">
-                  <span>Delivery Fee</span>
-                  <span>€0.40</span>
-                </div>
-                <div class="flex justify-between text-sm text-gray-600">
-                  <span>Campaign Discount</span>
-                  <span class="text-green-600">-€0.00</span>
-                </div>
-                <div class="flex justify-between text-sm text-gray-600">
-                  <span>Taxes</span>
-                  <span>€0.39</span>
-                </div>
-              </div>
-
-              <div
-                class="flex justify-between items-center text-xl font-semibold mt-6 pt-6 border-t border-gray-200"
-              >
-                <span>Total</span>
-                <span class="text-indigo-600">€2.18</span>
-              </div>
-
-              <button
-                class="mt-6 w-full bg-indigo-600 text-white py-3 rounded-lg text-lg font-semibold hover:bg-indigo-700 transition-colors"
-              >
-                Confirm Order
+  <div class="max-w-6xl mx-auto px-4 py-8">
+    <div class="overflow-x-auto">
+      <table class="w-full border-collapse">
+        <thead>
+          <tr class="text-left border-b">
+            <th class="py-3 px-2">Product</th>
+            <th class="py-3 px-2">Price</th>
+            <th class="py-3 px-2">Date Added</th>
+            <th class="py-3 px-2">Stock</th>
+            <th class="py-3 px-2">Add to cart</th>
+          </tr>
+        </thead>
+        <tbody class="text-sm">
+          <!-- Row 1 -->
+          <tr class="border-b">
+            <td class="flex items-center gap-3 py-3 px-2">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Blackberries.jpg" alt="Blackberries" class="w-12 h-12 object-contain">
+              <span>Blackberries - 6oz</span>
+            </td>
+            <td class="py-3 px-2">
+              <span class="line-through text-gray-500 mr-1">$4.99</span>
+              <span class="text-red-700">$2.99</span>
+            </td>
+            <td class="py-3 px-2">September 10, 2025</td>
+            <td class="py-3 px-2 text-green-600">In Stock</td>
+            <td class="py-3 px-2 flex items-center gap-3">
+              <button class="bg-purple-700 hover:bg-purple-800 text-white rounded-lg px-4 py-2">
+                Add to cart
               </button>
-
-              <div
-                class="mt-4 flex justify-center text-xs text-gray-500 space-x-4"
-              >
-                <a href="#" class="hover:underline">Privacy Policy</a>
-                <a href="#" class="hover:underline">Shipping</a>
-                <a href="#" class="hover:underline">Refund and Policy</a>
-                <a href="#" class="hover:underline">Terms of Service</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+              <button class="text-gray-500 border rounded-full w-6 h-6 flex items-center justify-center hover:bg-gray-200">×</button>
+            </td>
+          </tr>
+          <!-- Row 2 -->
+          <tr class="border-b">
+            <td class="flex items-center gap-3 py-3 px-2">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Banana-Single.jpg" alt="Bananas" class="w-12 h-12 object-contain">
+              <span>Marketside Fresh Organic Bananas, Bunch</span>
+            </td>
+            <td class="py-3 px-2">
+              <span class="line-through text-gray-500 mr-1">$1.99</span>
+              <span class="text-red-700">$0.89</span>
+            </td>
+            <td class="py-3 px-2">September 10, 2025</td>
+            <td class="py-3 px-2 text-green-600">In Stock</td>
+            <td class="py-3 px-2 flex items-center gap-3">
+              <button class="bg-purple-700 hover:bg-purple-800 text-white rounded-lg px-4 py-2">
+                Add to cart
+              </button>
+              <button class="text-gray-500 border rounded-full w-6 h-6 flex items-center justify-center hover:bg-gray-200">×</button>
+            </td>
+          </tr>
+          <!-- Row 3 -->
+          <tr>
+            <td class="flex items-center gap-3 py-3 px-2">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Cauliflower.jpg" alt="Cauliflower" class="w-12 h-12 object-contain">
+              <span>Fresh Cauliflower, Each</span>
+            </td>
+            <td class="py-3 px-2">
+              <span class="line-through text-gray-500 mr-1">$14.79</span>
+              <span class="text-red-700">$12.79</span>
+            </td>
+            <td class="py-3 px-2">September 10, 2025</td>
+            <td class="py-3 px-2 text-green-600">In Stock</td>
+            <td class="py-3 px-2 flex items-center gap-3">
+              <button class="bg-purple-700 hover:bg-purple-800 text-white rounded-lg px-4 py-2">
+                Add to cart
+              </button>
+              <button class="text-gray-500 border rounded-full w-6 h-6 flex items-center justify-center hover:bg-gray-200">×</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  </body>
-</html>
+
+    <!-- Social Icons -->
+    <div class="flex items-center gap-2 mt-6">
+      <span class="mr-2">Share on:</span>
+      <a href="#" class="bg-blue-600 text-white p-2 rounded"><i class="fab fa-facebook-f"></i>F</a>
+      <a href="#" class="bg-sky-500 text-white p-2 rounded">T</a>
+      <a href=
