--- a/index.html
+++ b/index.html
@@ -827,9 +827,9 @@
 
       <!-- Desktop Menu -->
       <div class="menu-bar hidden xl:block border-[var(--border)]">
-        <div class="custom-container py-3 relative">
+        <div class="custom-container py-3 pb-6 relative">
           <ul
-            class="flex items-center space-x-4 gap-2 justify-center text-[var(--text)] font-medium"
+            class="flex items-center space-x-4 gap-6 justify-center text-[var(--text)] font-medium"
           >
             <li class="group m-0">
               <a
@@ -843,7 +843,7 @@
               </a>
               <!-- Mega Dropdown -->
               <div
-                class="absolute !left-[-0px] top-[80%] pt-1 hidden group-hover:block w-[100%] animate-fadeIn"
+                class="absolute !left-[-0px] top-[70%] pt-1 hidden group-hover:block w-[100%] animate-fadeIn"
               >
                 <div class="custom-container">
                   <div
@@ -1105,7 +1105,7 @@
               </a>
               <!-- Mega Dropdown -->
               <div
-                class="absolute !left-[-0px] top-[80%] pt-1 hidden group-hover:block w-[100%] animate-fadeIn"
+                class="absolute !left-[-0px] top-[70%] pt-1 hidden group-hover:block w-[100%] animate-fadeIn"
               >
                 <div class="custom-container">
                   <div
@@ -1361,7 +1361,7 @@
               </a>
               <!-- Mega Dropdown -->
               <div
-                class="absolute !left-[-0px] top-[80%] pt-1 hidden group-hover:block w-[100%] animate-fadeIn"
+                class="absolute !left-[-0px] top-[70%] pt-1 hidden group-hover:block w-[100%] animate-fadeIn"
               >
                 <div class="custom-container">
                   <div
